# genshin-check-in

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  index.py  server.py  test.py
.github/workflows/: build.yml
src/: main.rs
