[package]
name = "genshin_check_in"
version = "1.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.11", features = [
    "blocking",
    "cookies",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
once_cell = "1"

[profile.release]
lto = "fat"
codegen-units = 1
