[package]
name = "genshin_check_in"
version = "1.4.0"
edition = "2021"

[dependencies]
anyhow = "1"
once_cell = "1"
reqwest = { version = "0.11", default-features = false, features = [
    "blocking",
    "cookies",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "fat"
codegen-units = 1
