[package]
name = "genshin_check_in"
version = "1.3.2"
edition = "2021"

[dependencies]
anyhow = "1.0.66"
once_cell = "1.16.0"
serde = { version = "1.0.149", features = ["derive"] }
serde_json = "1.0.89"
thiserror = "1.0.37"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dependencies.reqwest]
version = "0.11.13"
default-features = false
features = ["blocking", "cookies", "json", "rustls-tls"]

[profile.release]
lto = true
codegen-units = 1
